--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.driver=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/firstapidb
+spring.datasource.username=firstapi
+spring.datasource.password=password
